--- a/Services/Analystor.Nishomi.Admin/Views/Category/Edit.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Category/Edit.cshtml
@@ -9,12 +9,13 @@
 <div class="contentWrap">
     <h3 id="editgeneral">Category Details</h3>
     <!-- Form BLock -->
-    <form asp-action="Edit" asp-controller="Category" data-ajax="true" data-ajax-method="post" data-ajax-failure="onAjaxFailure" data-ajax-success="onAjaxSuccess" enctype="multipart/form-data">
+    <form asp-action="Update" asp-controller="Category" data-ajax="true" data-ajax-method="post" data-ajax-failure="onAjaxFailure" data-ajax-success="onAjaxSuccess" enctype="multipart/form-data">
         <div class="formBlk">
             <div class="row">
                 <div class="col-md-6 formsingle">
                     <label class="mandatory">Name</label>
                     <input type="text" id="unitName" asp-for="Name" autofocus required placeholder="Name">
+                    <input type="hidden" id="unitName" asp-for="CategoryId" />
                 </div>
             </div>
 
