--- a/Services/Analystor.Nishomi.Admin/Views/Product/Edit.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Product/Edit.cshtml
@@ -16,6 +16,7 @@
                     <div class="col-md-6 formsingle">
                         <label class="mandatory">Product Code</label>
                         <input type="text" asp-for="ProductCode" id="productCode" placeholder="Product Code">
+                        <input type="hidden" asp-for="ProductId">
                     </div>
                     <div class="col-md-6 formsingle">
                         <label class="mandatory">Product Name</label>
