--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -1,52 +1,52 @@
 <app-header></app-header>
 <section id="collections" *ngFor="let item of category; index as i; first as isFirst">
-    <div [className]="i%2==0? 'collblk collbg1':'collblk collbg2'">
-      <div class="container">
-        <div class="prodflex">
-          <div class="prodleft">
-            <img src="{{imageurl+item.url}}" alt="">
+  <div [className]="i%2==0? 'collblk collbg1':'collblk collbg2'">
+    <div class="container">
+      <div class="prodflex">
+        <div class="prodleft">
+          <img src="{{imageurl+item.url}}" alt="">
+        </div>
+        <div class="prodright">
+          <div class="colltitle">
+            <h6>{{item.caption}}</h6>
+            <h3>{{item.name}}</h3>
           </div>
-          <div class="prodright">
-            <div class="colltitle">
-              <h6>{{item.caption}}</h6>
-              <h3>{{item.name}}</h3>
-            </div>
-            <div class="carorelative">
-              <div class="swiper-container collcaro colcar1" [swiper]="config">
-                <div class="swiper-wrapper">
-                  
-                  <div class="swiper-slide" *ngFor="let pro of item.products;index as i;first as is">
-                    <div class="collimg"> 
-                      <a href=""><img src="{{imageurl+pro.images[0].imageUrl}}" alt=""></a>
+          <div class="carorelative">
+            <div class="swiper-container collcaro colcar1" [swiper]="config">
+              <div class="swiper-wrapper">
 
+                <div class="swiper-slide" *ngFor="let pro of item.products;index as i;first as is">
+                  <div class="collimg">
+                    <a href=""><img src="{{imageurl+pro.images[0].imageUrl}}" alt=""></a>
+
+                  </div>
+                  <div class="colldtls">
+                    <h6><a href="">{{pro.name}}</a></h6>
+                    <h5>{{pro.type}} - {{pro.color}}</h5>
+                    <div class="price-box">
+                      <span class="old">SR {{pro.cost.toFixed(2)}}</span>
+                      <span class="new">SR {{pro.cost.toFixed(2)}}</span>
                     </div>
-                    <div class="colldtls">
-                      <h6><a href="">{{pro.name}}</a></h6>
-                      <h5>{{pro.type}} - {{pro.color}}</h5>
-                      <div class="price-box">
-                        <span class="old">SR {{pro.cost.toFixed(2)}}</span>
-                        <span class="new">SR {{pro.cost.toFixed(2)}}</span>
-                      </div>
-                      <div class="quickview">
-                        <a (click)="open(mymodal);selectProduct(pro)">View Details</a>
-                      </div>
+                    <div class="quickview">
+                      <a (click)="open(mymodal);selectProduct(pro)">View Details</a>
                     </div>
                   </div>
-                  </div>
-                </div>
-                <div class="collpage">
-                  <div class="swiper-button-next colcar1-next"></div>
-                  <div class="swiper-button-prev colcar1-prev"></div>
                 </div>
               </div>
+            </div>
+            <div class="collpage">
+              <div class="swiper-button-next colcar1-next"></div>
+              <div class="swiper-button-prev colcar1-prev"></div>
             </div>
           </div>
         </div>
       </div>
- </section>
- <ng-template #mymodal let-modal>
+    </div>
+  </div>
+</section>
+<ng-template #mymodal let-modal>
   <div *ngIf="!isRequest" class="modal-body">
-    <button type="button" class="close"(click)="modal.dismiss('Cross click')" aria-label="Close">
+    <button type="button" class="close" (click)="modal.dismiss('Cross click')" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
     <div class="row">
@@ -54,7 +54,7 @@
         <div class="swiper-container topprod" [swiper]="config1">
           <div class="swiper-wrapper">
             <div class="swiper-slide" *ngFor="let img of selectedproduct.images;index as i;first as is">
-              <img src="{{imageurl+img.imageUrl}}" alt="">
+              <img src="{{imageurl+img.imageUrl}}" alt="" />
             </div>
           </div>
           <div class="prodpage"></div>
@@ -114,15 +114,15 @@
           <h2>Contact Details</h2>
           <form [formGroup]="profileForm" (ngSubmit)="buyProduct(selectedproduct);modal.dismiss('Cross click')">
             <div class="form-group">
-              <input formControlName="name" type="text" required="required"/>
+              <input formControlName="name" type="text" required="required" />
               <label for="input" class="control-label">Full Name</label><i class="bar"></i>
             </div>
             <div class="form-group">
-              <input formControlName="cusmail" type="text" required="required"/>
+              <input formControlName="cusmail" type="text" required="required" />
               <label for="input" class="control-label">Email</label><i class="bar"></i>
             </div>
             <div class="form-group">
-              <input formControlName="phone" type="text" required="required"/>
+              <input formControlName="phone" type="text" required="required" />
               <label for="input" class="control-label">Contact Number</label><i class="bar"></i>
             </div>
             <div class="form-group">
@@ -133,14 +133,14 @@
               <textarea formControlName="message" required="required"></textarea>
               <label for="textarea" class="control-label">Message</label><i class="bar"></i>
             </div>
-          
-          <div class="button-container">
-            <button class="button" type="submit"><span>Buy Now</span></button>
-          </div>
-        </form>
+
+            <div class="button-container">
+              <button class="button" type="submit"><span>Buy Now</span></button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
 </ng-template>
- <app-footer></app-footer>
+<app-footer></app-footer>
