--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -28,7 +28,7 @@
                       <span class="new">SR {{pro.cost.toFixed(2)}}</span>
                     </div>
                     <div class="quickview">
-                      <a routerLink="['/productdetails']">View Details</a>
+                      <a (click)="gotoDetails(pro.productId)">View Details</a>
                       <!-- <a (click)="open(mymodal);selectProduct(pro)">View Details</a> -->
                     </div>
                   </div>
