Changes in the website

--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         </div>
         <ul class="main">
           <li><a routerLink="/story">Our Story</a></li>
-          <li><a routerLink="/story">Blogs</a></li>
+          <li><a routerLink="/blogs">Blogs</a></li>
           <li><a routerLink="/contactus">Stay in touch</a></li>
           <li><a routerLink="/products">View Products</a></li>
         </ul>
