changes in admin side and front end angular application

--- a/Services/Analystor.Nishomi.Admin/Views/Category/Create.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Category/Create.cshtml
@@ -36,6 +36,10 @@
                     <label class="mandatory">Image</label>
                     <input type="file" asp-for="File" />
                 </div>
+                <div class="col-md-6 formsingle">
+                    <label class="mandatory">Model Image</label>
+                    <input type="file" asp-for="ModelImage" />
+                </div>
             </div>
             <div class="col-md-12 formsingle">
                 <button class="btnRed btnSmall" name=""><i class="mdi mdi-content-save-outline"></i>Save</button>
