--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="prodflex">
         <div class="prodleft">
-          <img src="{{imageurl+item.url}}" alt="">
+          <img src="{{imageurl+item.image}}" alt="">
         </div>
         <div class="prodright">
           <div class="colltitle">
