--- a/Web/src/app/home/home.component.html
+++ b/Web/src/app/home/home.component.html
@@ -29,10 +29,11 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide" *ngFor="let item of featuredproducts">
             <div class="hmeprsing">
-              <a href=""><img src="{{imageurl+item.images[0].imageUrl}}" alt=""><span  [className]="!item.caption?'':item.caption=='Limited'?'limited':item.caption=='New'?'new':'best'">{{item.caption}}</span></a>
+              <a (click)="gotoDetails(item.productId)"><img src="{{imageurl+item.images[0].imageUrl}}" alt=""><span  [className]="!item.caption?'':item.caption=='Limited'?'limited':item.caption=='New'?'new':'best'">{{item.caption}}</span></a>
               <div class="hmeprsingdtl">
-                <h6><a href="">{{item.categoryName}}</a></h6>
-                <h3><a href="">{{item.name}}</a></h3>
+                <!-- <h6><a href="">{{item.categoryName}}</a></h6>
+                <h3><a href="">{{item.name}}</a></h3> -->
+                <h3><a (click)="gotoDetails(item.productId)">Nishomi - {{item.categoryName}} {{item.productCode}}</a></h3>
                 <p>{{item.description}}</p>
               </div>
             </div>
