--- a/Web/src/app/footer/footer.component.html
+++ b/Web/src/app/footer/footer.component.html
@@ -7,8 +7,8 @@
       <div class="foonav">
         <ul>
           <li>
-            <a href="">Our Story</a>
-            <a href="">Our Products</a>
+            <a routerLink="/story">Our Story</a>
+            <a routerLink="/products">Our Products</a>
           </li>
           <li>
             <a href="">FAQ</a>
