--- a/Web/src/assets/css/style.css
+++ b/Web/src/assets/css/style.css
@@ -464,7 +464,7 @@ header .sub li a:after {
 }
 .hmeprsing {
   border-radius: 2px;
-  border: solid 1px #c8c8c6
+  border: solid 1px #c8c8c6,
 }
 .hmeprsing > a {
   position: relative;
@@ -810,6 +810,8 @@ footer .foonav ul li a {
   overflow: hidden;
   -webkit-box-shadow: 0 0 6px 2px rgba(0,0,0,0.1);
   box-shadow: 0 0 6px 2px rgba(0,0,0,0.1); 
+  height: 224px;
+  width:224px;
 }
 .collcaro .swiper-slide .collimg img {
   width: 100%;
