Fixes in custome size button and swiper next and previous buttons

--- a/Web/src/app/productdetails/productdetails.component.html
+++ b/Web/src/app/productdetails/productdetails.component.html
@@ -85,7 +85,7 @@
                 </li>
               </ul>
               <div class="customizeblk">
-              <h6 class="custombtm" (click)="toggleCustomeSize()"><span>CUSTOM SIZE</span></h6>
+              <h6 class="custombtm" role="button" (click)="toggleCustomeSize()"><span>CUSTOM SIZE</span></h6>
               <div class="customsize" [ngClass]="showCustomsize ? 'show' : ''">
                 <ul>
                   <li>
